# Colab-Bridge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
colab_bridge/: __init__.py  direct_kernel.py  gcs_agent.py
skills/colab/: SKILL.md
