[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name            = "colab_bridge"
version         = "0.2.0"
description     = "Programmatic access to Google Colab runtimes via the VS Code extension API."
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests",
    "google-auth",
    "google-auth-oauthlib",
    "tqdm",
]

[project.optional-dependencies]
# `pip install 'colab_bridge[gcs]'` to enable GCSAgent helpers in gcs_agent.py.
# (The module also lazy-installs google-cloud-storage on first use if missing.)
gcs = ["google-cloud-storage"]

[project.urls]
Homepage = "https://github.com/sam-engel/Colab-Bridge"
Repository = "https://github.com/sam-engel/Colab-Bridge"
Issues = "https://github.com/sam-engel/Colab-Bridge/issues"

[project.scripts]
# Registers `colab` in the env's bin dir; resolves to colab_bridge.direct_kernel._cli().
colab = "colab_bridge.direct_kernel:_cli"

[tool.setuptools.packages.find]
where   = ["."]
include = ["colab_bridge*"]
